fixed overflowing

--- a/src/components/InvoiceDetail/InvoiceDetail.css
+++ b/src/components/InvoiceDetail/InvoiceDetail.css
@@ -183,6 +183,10 @@
     justify-content: space-between;
   }
 
+  .single-sent-to {
+    min-width: 100px;
+  }
+
   .single-id-container {
     flex-direction: column;
     align-items: flex-start;
